# EdgeAccessPKI

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
config/: access_policy.csv  gateway.conf
docs/: access_policy.md  deployment.md  operator_runbook.md  run_result.md  security_model.md
src/: main.c
